# friday

./: .gitignore  AGENTS.md  BACKGROUND_SYNC_FIX.md  LICENSE  README.md  commands.txt  compile.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpmbump.txt  svelte_errors.txt  svelte_errors_v2.txt  to-do.txt  vite.config.js
.github/workflows/: push-branch.yml  release.yml
fdroid/: config.yml  repo.jks
fdroid/metadata/: com.joris.friday.yml
fdroid/repo/: entry.json  index-v1.json  index-v2.json  index.html  index.xml
fdroid/repo/diff/: 1776076413000.json  1776094434000.json  1776095604000.json  1776098999000.json  1776192026000.json  1776192971000.json  1776246700000.json  1776417514000.json  1776524503000.json  1780060209000.json
fdroid/repo/status/: running.json  update.json
fdroid/tmp/: apkcache.json  repo_1776098999000.json  repo_1776192971000.json  repo_1776524503000.json
scripts/: pkg-run.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  client.rs  jni.rs  lib.rs  main.rs  temp_test.rs
src-tauri/src/commands/: activities.rs  assignments.rs  auth.rs  bronnen.rs  calendar.rs  grades.rs  leermiddelen.rs  messages.rs  mod.rs  notifications.rs  studiewijzers.rs
src-tauri/src/models/: account.rs  activities.rs  assignments.rs  bronnen.rs  calendar.rs  grades.rs  leermiddelen.rs  messages.rs  mod.rs  schoolyears.rs  studiewijzers.rs
src/lib/: api.ts  stores.test.ts  stores.ts
src/routes/: +layout.svelte  +page.svelte
(+15 files in other folders)
