[package]
name = "friday"
version = "1.2.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "friday_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
url = "2"
futures = "0.3"
mime_guess = "2.0.5"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
jni = "0.21.1"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false
strip = true # Strips symbols from the binary

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
wiremock = "0.6.5"
